Fix radio button spacing
Increase spacing between radio buttons
for measures questions 2, 4 and 6.

--- a/exp-player/addon/styles/components/isp-radio-group.scss
+++ b/exp-player/addon/styles/components/isp-radio-group.scss
@@ -24,6 +24,11 @@
   margin-top: -15px;
 }
 
-.label-spacing {
-  max-width: 6%;
+.measure-four {
+  width: 6%;
+}
+
+.measure-six {
+    width: 8%;
+    margin-right: 20px;
 }
